syntax = "proto3";

option go_package = "github.com/envoy/examples/grpc-s2s/service";

message HelloRequest {
}

message HelloResponse {
  string reply = 1;
}

service Hello {
  rpc Greet(HelloRequest) returns (HelloResponse);
}
